# wijjit

./: .gitattributes  .gitignore  AGENTS.md  API_AUDIT_0.1.0.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_0.1.0.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PLAN.md  SECURITY.md  issues.md  pyproject.toml  pytest.ini  roadmap.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DOCUMENTATION_PLAN.md  NEW-ELEMENTS.md
docs/source/: conf.py  index.rst
examples/: README.md  alert_dialog_demo.py  alignment_demo.py  centered_dialog.py  checkbox_demo.py  code_demo.py  complex_layout_demo.py  confirm_dialog_demo.py  context_menu_demo.py  debug_keys.py  download_simulator.py  dropdown_demo.py  filesystem_browser.py  form_demo.py  frame_overflow_demo.py  frame_overflow_direct_demo.py  frame_sizing_demo.py  hello_world.py  input_dialog_demo.py  listview_demo.py  login_form.py  logview_demo.py  markdown_demo.py  modal_with_button_demo.py  mouse_demo.py  navigation_demo.py  notification_demo.py  preferences_template_demo.py  progress_demo.py  radio_demo.py  rich_content_demo.py  rich_content_template_demo.py  scroll_demo.py  scrollable_children_demo.py  scrollable_minimal.py  select_demo.py  simple_checkbox_template.py  simple_input_test.py  simple_modal_demo.py  spinner_demo.py  (+8 more)
examples/_tests/: frame_sizing_demo.py
examples/advanced/: complex_layout_demo.py  context_menu_demo.py  dashboard_demo.py  data_entry_demo.py  download_simulator.py  error_handling_demo.py  event_patterns_demo.py  executor_demo.py  filesystem_browser.py  form_demo.py  frame_overflow_demo.py  horizontal_scroll_demo.py  login_form.py  navigation_demo.py  preferences_demo.py  rich_content_demo.py  rich_content_template_demo.py  scroll_demo.py  scrollable_children_demo.py  scrollable_minimal.py  splitpanel_nested_demo.py  state_management_demo.py  template_demo.py  todo_app.py
examples/apps/: chatbot.py  spreadsheet.py  todo_app.py
examples/basic/: alignment_demo.py  async_demo.py  autocomplete_demo.py  config_demo.py  debug_keys.py  grid_demo.py  hello_world.py  hstack_flexbox_demo.py  inline_demo.py  inline_input_demo.py  inline_progress_demo.py  mouse_demo.py  simple_input_test.py  suspend_demo.py  theme_config_demo.py
examples/styling/: css_classes_demo.py  css_theme_demo.py  custom_theme.css
examples/to-replace/: checkbox_demo.py  form_demo.py  preferences_template_demo.py  rich_content_demo.py  simple_checkbox_template.py  simple_modal_demo.py
examples/widgets/: alert_dialog_demo.py  centered_dialog.py  charts_demo.py  checkbox_demo.py  code_demo.py  code_editor_demo.py  confirm_dialog_demo.py  contentview_demo.py  datagrid_demo.py  dialog_showcase.py  dropdown_demo.py  html_demo.py  imageview_demo.py  input_dialog_demo.py  listview_demo.py  logview_demo.py  markdown_demo.py  modal_with_button_demo.py  notification_demo.py  pager_demo.py  progress_demo.py  radio_demo.py  select_demo.py  slider_demo.py  spinner_demo.py  splitpanel_demo.py  status_indicator_demo.py  statusbar_demo.py  tabbedpanel_demo.py  table_demo.py  test_markdown_tag.py  textarea_demo.py  toggle_demo.py  tree_demo.py
plan/: 00-plan-overall.md  01-features.md  basic-api.md  core-app-api.md  events.md  frames.md  key-binding.md  mouse-events.md  outline.md  rendering.md  templates.md  views-styles.md
src/wijjit/: __init__.py  __main__.py  cli.py  config.py  helpers.py  logging_config.py  text.py
tests/: __init__.py  conftest.py  helpers.py  test_helpers.py  test_logging_config.py  test_public_api.py  test_text.py  test_visual_regression.py
tests/__snapshots__/: test_visual_regression.ambr
tests/autocomplete/: __init__.py  test_completer.py  test_integration.py  test_mixin.py  test_popup.py  test_resolver.py  test_state.py  test_utils.py
tests/benchmarks/: test_performance.py
tests/core/: test_app.py  test_config.py  test_events.py  test_focus.py  test_focus_by_id.py  test_hover.py  test_notification_manager.py  test_overlay.py  test_overlay_auto_bounds.py  test_reconciler.py  test_renderer.py  test_state.py  test_suspend.py  test_templating.py  test_vdom.py
tests/devtools/: test_tree.py  test_validate.py
tests/e2e/: helpers.py  test_form_submission.py  test_onboarding_flow.py  test_overlay_rendering.py
tests/elements/: __init__.py  test_base.py  test_boolean_on_change.py  test_chart_color_mode.py  test_charts.py  test_checkbox.py  test_code_editor.py  test_contentview.py  test_datagrid.py  test_display.py  test_htmlviewer.py  test_imageview.py  test_input.py  test_listview.py  test_logview.py  test_menu.py  test_modal.py  test_notification.py  test_overlay_callback_dispatch.py  test_pager.py  test_progressbar.py  test_radio.py  test_slider.py  test_spinner.py  test_status_indicator.py  test_statusbar.py  test_tab_index_constructors.py  test_tabbedpanel.py  test_table.py  test_text_align.py  test_textarea.py  test_toggle.py  test_tree.py  test_value_data_properties.py
tests/examples/: test_error_handling_demo_layout.py  test_example_interactions.py  test_examples_render.py
tests/golden/: test_format_golden.py
tests/inline/: __init__.py  test_app.py  test_cursor.py  test_render.py
tests/integration/: test_app_lifecycle.py  test_cell_rendering_integration.py  test_frame_focus_border.py  test_menu_integration.py  test_modal_key_routing.py  test_scroll_hit_testing.py  test_state_rendering.py  test_template_pipeline.py
tests/layout/: __init__.py  test_bounds.py  test_dirty.py  test_engine.py  test_frames.py  test_scroll.py  test_splitpanel.py
tests/rendering/: __init__.py  test_ansi_adapter.py  test_html_adapter.py  test_paint_context.py
tests/styling/: __init__.py  test_css_parser.py  test_resolver.py  test_style.py  test_theme.py
tests/tags/: __init__.py  test_attr_warnings.py  test_grid_gap.py  test_inner_text.py  test_item_tags.py  test_menu_tags.py  test_overlay_tags.py  test_statusbar_tags.py  test_tabindex.py
tests/terminal/: __init__.py  test_ansi.py  test_cell.py  test_input.py  test_mouse.py  test_screen.py  test_screen_buffer.py
(+238 files in other folders)
