[project]
name = "wijjit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Thomas.Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv", "experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D301",  # Use r prefix for docstrings with backslashes
    "D401",  # First line should be in imperative mood
    "B017",  # assertRaises(Exception) considered evil
    "E402",  # Module level import not at top (common with pytest.skip)
    "E501",  # Line too long (tests often have long assertion lines)
    "F841",  # Variable assigned but never used

]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true