[project]
name = "wijjit"
version = "0.1.0a"
description = "A declarative TUI framework for Python - Flask for the Console"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Thomas Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "tui",
    "terminal",
    "cli",
    "console",
    "ui",
    "framework",
    "jinja2",
    "declarative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.6",
    "prompt-toolkit>=3.0.52",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "tinycss2>=1.5.0",
    "wcwidth>=0.2.14",
]

[project.urls]
Homepage = "https://github.com/tvillani/wijjit"
Documentation = "https://wijjit.readthedocs.io"
Repository = "https://github.com/tvillani/wijjit"
Issues = "https://github.com/tvillani/wijjit/issues"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.14.2",
    "syrupy>=4.0.0",
    "sphinx>=8.2.3",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-tabs>=3.4.7",
]
images = [
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv", "experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D301",  # Use r prefix for docstrings with backslashes
    "D401",  # First line should be in imperative mood
    "B017",  # assertRaises(Exception) considered evil
    "E402",  # Module level import not at top (common with pytest.skip)
    "E501",  # Line too long (tests often have long assertion lines)
    "F841",  # Variable assigned but never used
]
"examples/**/*.py" = [
    "E501",
    "B007",
    "F841"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
