[project]
name = "wijjit"
dynamic = ["version"]
description = "A declarative TUI framework for Python - Flask for the Console"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Thomas Villani", email = "thomas.villani@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "tui",
    "terminal",
    "cli",
    "console",
    "ui",
    "framework",
    "jinja2",
    "declarative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1.6",
    "prompt-toolkit>=3.0.52",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "tinycss2>=1.5.0",
    "wcwidth>=0.2.14",
]

[project.urls]
Homepage = "https://github.com/thomas-villani/wijjit"
Documentation = "https://wijjit.readthedocs.io"
Repository = "https://github.com/thomas-villani/wijjit"
Issues = "https://github.com/thomas-villani/wijjit/issues"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.14.2",
    "syrupy>=4.0.0",
    "sphinx>=8.2.3",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-tabs>=3.4.7",
]
images = [
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wijjit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wijjit"]

# Explicit sdist contents so the build is deterministic and never walks stray
# local directories (e.g. a `.venv-wsl/` with broken symlinks on Windows).
[tool.hatch.build.targets.sdist]
include = [
    "src/wijjit",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["build", "dist", ".venv", "experiments"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D301",  # Use r prefix for docstrings with backslashes
    "D401",  # First line should be in imperative mood
    "B017",  # assertRaises(Exception) considered evil
    "E402",  # Module level import not at top (common with pytest.skip)
    "E501",  # Line too long (tests often have long assertion lines)
    "F841",  # Variable assigned but never used
    "F401"
]
"examples/**/*.py" = [
    "E501",
    "B007",
    "F841"
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Per-module overrides
#
# The four modules below carry the deep type-model gaps in the codebase:
# - layout.engine: SizeConstraints/HStack/VStack/FrameNode take int but receive
#   "int | str" (e.g. "fill"/"auto") from template tags, and Literal alignment
#   strings flow through plain str in renderer.py before reaching engine.py.
#   Cleaning this requires Literal types end-to-end or cast() at the boundary.
# - core.renderer: similar Literal alignment flow plus Element-base attr access
#   without proper Protocol/cast narrowing (e.g. width/height/style/tab_position
#   on Element when the renderer knows the concrete subclass).
# - core.wiring: factory-style nested closures (make_close_callback,
#   make_shortcut_handler, make_key_handler) cross multiple untyped boundaries.
# - layout.frames: BorderStyle | None indexed against dict[BorderStyle, ...] in
#   several call sites; needs structural cleanup of optional border handling.
#
# All four pass ruff and have working tests. The targeted disables below allow
# CI's mypy gate to stay green while these architectural cleanups are tracked
# as follow-up work in RELEASE_PLAN.md Phase 3. The rest of src/ is strict.
[[tool.mypy.overrides]]
module = "wijjit.layout.engine"
disable_error_code = ["arg-type", "assignment", "operator", "type-var", "misc", "return-value", "type-arg"]

[[tool.mypy.overrides]]
module = "wijjit.core.renderer"
disable_error_code = ["arg-type", "assignment", "attr-defined", "type-arg", "no-untyped-def", "misc"]

[[tool.mypy.overrides]]
module = "wijjit.core.wiring"
disable_error_code = ["no-untyped-def", "no-untyped-call", "misc"]

[[tool.mypy.overrides]]
module = "wijjit.layout.frames"
disable_error_code = ["index", "arg-type", "assignment", "type-arg", "no-untyped-def", "operator", "no-any-return"]

# Additional element-layer modules with the same structural patterns
# (property setters lacking annotations, optional-pillow/pandas imports,
# Element-base attr access through generic containers). All ruff-clean and
# tested; deeper typing is tracked as Phase 3 follow-up.
[[tool.mypy.overrides]]
module = "wijjit.elements.input.datagrid"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "no-any-return", "import-untyped"]

[[tool.mypy.overrides]]
module = "wijjit.core.app"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "misc", "var-annotated"]

[[tool.mypy.overrides]]
module = "wijjit.elements.display.tabbed_panel"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "attr-defined", "operator"]

[[tool.mypy.overrides]]
module = "wijjit.elements.input.code_editor"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "attr-defined", "no-any-return", "operator", "union-attr", "import-untyped"]

[[tool.mypy.overrides]]
module = "wijjit.elements.display.tree"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "no-any-return", "operator"]

[[tool.mypy.overrides]]
module = "wijjit.elements.display.image"
disable_error_code = ["no-untyped-def", "type-arg", "import-untyped", "assignment", "no-any-return", "operator", "attr-defined", "unused-ignore", "str-bytes-safe", "return-value", "type-var", "index", "comparison-overlap"]

[[tool.mypy.overrides]]
module = "wijjit.testing.harness"
disable_error_code = ["no-untyped-def", "type-arg", "no-untyped-call", "assignment", "unused-ignore"]

[[tool.mypy.overrides]]
module = "wijjit.elements.display.table"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "no-any-return", "attr-defined"]

[[tool.mypy.overrides]]
module = "wijjit.elements.display.pager"
disable_error_code = ["no-untyped-def", "type-arg", "arg-type", "assignment", "attr-defined", "operator"]

[[tool.mypy.overrides]]
module = "wijjit.styling.css_parser"
disable_error_code = ["no-untyped-def", "type-arg", "import-untyped", "no-any-return"]

[[tool.mypy.overrides]]
module = "wijjit.elements.menu"
disable_error_code = ["no-untyped-def", "type-arg", "operator", "arg-type"]

# Optional pyperclip stubs not installed; the import is wrapped in try/except.
[[tool.mypy.overrides]]
module = "pyperclip"
ignore_missing_imports = true

# Pillow is an optional dependency (the `images` extra) and is not installed in
# the CI lint environment; image.py guards its use behind a PIL_AVAILABLE flag.
[[tool.mypy.overrides]]
module = "PIL"
ignore_missing_imports = true

# suspend.py accesses Unix-only signal attributes (SIGTSTP/SIGCONT) guarded at
# runtime by a platform check. The `# type: ignore[attr-defined]` comments are
# required on Windows (where mypy's stdlib stubs omit those attrs) but are
# "unused" on Linux/macOS, so warn_unused_ignores must be relaxed here.
[[tool.mypy.overrides]]
module = "wijjit.core.suspend"
disable_error_code = ["unused-ignore"]

# The wcwidth `# type: ignore[import-untyped]` is needed against older,
# stub-less wcwidth releases but is "unused" once wcwidth ships py.typed; relax
# warn_unused_ignores so the import line is valid across wcwidth versions.
[[tool.mypy.overrides]]
module = "wijjit.terminal.ansi"
disable_error_code = ["unused-ignore"]
